--- a/unit_3/index.html
+++ b/unit_3/index.html
@@ -6,11 +6,15 @@
 </head>
 
 <body>
+<img src="images/WallyDigital_2a.jpg" width="100" height="100">
 <h1>Wally Digital</h1>
 <p class="important">Creating the web one page at a time</p>
-<img src="images/WallyDigital_2a.jpg" width="300" height="300">
-<p>
+<section id="splash">
+
+</section>    
+<p class="purple">
 Welcome to Wally Digital! We pride ourselves on providing incredible web design services while focusing on epic customer service.</p>
+
 <h2>
 	About Us
 </h2>
@@ -20,6 +24,11 @@ Welcome to Wally Digital! We pride ourselves on providing incredible web design 
 <h2>
 	Portfolio
 </h2>
+
+<p class="Portfolio">
+<img src="images/fly.png" width="150" height="150" class="left"/>
+<img src="images/NAMAS T Yoga Screenshot.png" width="150" height="150" class="right"/>
+
 
 
 <h2>
