--- a/unit_5/index.html
+++ b/unit_5/index.html
@@ -11,8 +11,16 @@
 	<img id="logo" src="images/WallyDigital_2a.jpg" alt="Wally Digital" title="Wally Digital" width="100" height="100">
 
 <header>
-	
-This is the header which contains the social logos
+	<h1>Wally Digital</h1>
+	<p class="important">Creating the web one page at a time</p>
+	<section id="social" class="clearfix">
+
+	<div><img id="Facebook.png" img src="images/Facebook.png" alt="Facebook" title="Facebook" width="60" height="60">   
+	 </div>
+
+	 <div><img id="Twitter.png" img src="images/Twitter.png" alt="Twitter" title="Twitter" width="60" height="60"></div>
+
+	</section>
 
 </header>
 
@@ -36,8 +44,7 @@ This is where the slider is contained
 	
 </aside>
 
-	<h1>Wally Digital</h1>
-	<p class="important">Creating the web one page at a time</p>
+
 	<section id="splash">
 
 	</section>    
@@ -55,22 +62,17 @@ This is where the slider is contained
 <section id="two_column" class="clearfix">
 	<aside id="left">
 		<p>Aside</p>
-		<p>Lorem Ipsum..Lorem Ipsum..Lorem Ipsum..Lorem Ipsum..Lorem Ipsum..Lorem Ipsum..Lorem Ipsum..</p>
+		<img id="wally" src="images/wally.jpg" alt="wally"
+		  title="wally" width="100" height="100"
 	</aside>
 	<article id="right">
-		<p>Article</p>
+	
 		<p>
 		 Wally Digital is design firm run by Geoff Goodman. He is a web designer from Philadelphia P.a. Geoff helps clients all over the world with creating websites from scratch utilizing wordpress. For information regarding
 	</p>
 	</article>
 </section>
 
-	<img id="wally" src="images/wally.jpg" alt="wally"
-		  title="wally" width="100" height="100"
-
-	
-
-</section>
 
 	<h2>
 		Portfolio
