--- a/unit_8/index.html
+++ b/unit_8/index.html
@@ -4,6 +4,7 @@
 	<title>Welcome To Wally Digital</title>
 	<link rel="stylesheet" type="text/css" href="css/reset.css">
 	<link rel="stylesheet" type="text/css" href="css/style.css">
+	<meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 
 <body>
@@ -11,8 +12,6 @@
 	<img id="logo" src="images/WallyDigital_2a.jpg" alt="Wally Digital" title="Wally Digital" width="100" height="100">
 
 <header>
-	<h1>Wally Digital</h1>
-	<p class="important">Creating the web one page at a time</p>
 	<section id="social" class="clearfix">
 
 	<div><img id="Facebook.png" img src="images/Facebook.png" alt="Facebook" title="Facebook" width="60" height="60">   
@@ -34,18 +33,14 @@
 
 
 
-<section id="slider">
-
-This is where the slider is contained
-	
-</section>
-
 <aside class="picture">
 	
 </aside>
 
 
 	<section id="splash">
+	<h1>Wally Digital</h1>
+	<h2>Designing The Web One Page At A Time</h2>
 
 	</section>    
 	<p class="intro">
